--- a/styles/main.scss
+++ b/styles/main.scss
@@ -10,6 +10,7 @@
 @import "./scss/layouts/header";
 @import "./scss/layouts/searchform";
 @import "./scss/layouts/hero";
+@import "./scss/layouts/footer";
 // @import "./scss/layouts/nav";
 // @import "./scss/layouts/container";
 // @import "./scss/layouts/form";
