--- a/styles/scss/layouts/_header.scss
+++ b/styles/scss/layouts/_header.scss
@@ -1,11 +1,14 @@
 header {
+    @include x-container;
+    
     display: flex;
     align-items: center;
     justify-content: center;
 
     height: em-calc(65); 
     width: 100vw;
-    padding: em-calc(10) em-calc(15);
+    padding-top: em-calc(10);
+    padding-bottom: em-calc(10);
     box-shadow: em-calc(0) em-calc(2) em-calc(5) rgba(0, 0, 0, 0.15);
 
     position: relative;
