--- a/styles/scss/layouts/_header.scss
+++ b/styles/scss/layouts/_header.scss
@@ -14,7 +14,7 @@ header {
     position: relative;
     top: 0px;
 
-    background-color: white;
+    background-color: $white;
 }
 
 .header--brand {
