--- a/styles/main.css
+++ b/styles/main.css
@@ -132,6 +132,48 @@ header {
 .steps-section {
   padding-left: 1.1111111111em;
   padding-right: 1.1111111111em;
+  padding-top: 2.7777777778em;
+  padding-bottom: 2.7777777778em;
+}
+
+.steps-section__list {
+  margin-top: 1.3888888889em;
+}
+
+.steps-section__list--item {
+  list-style: none;
+  box-shadow: 0.1111111111em 0.2222222222em 0.5555555556em rgba(0, 0, 0, 0.1);
+  border-radius: 0.8333333333em;
+  background-color: #F6F6F6;
+  padding: 1.6666666667em;
+  font-weight: bold;
+  margin-left: 0.8333333333em;
+  position: relative;
+}
+.steps-section__list--item:not(:last-child) {
+  margin-bottom: 1.6666666667em;
+}
+.steps-section__list--item::after {
+  content: attr(data-count);
+  position: absolute;
+  background-color: #9356DC;
+  color: #ffffff;
+  font-weight: normal;
+  left: -0.8333333333em;
+  top: 50%;
+  transform: translateY(-50%);
+  width: 1.6666666667em;
+  height: 1.6666666667em;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border-radius: 50%;
+}
+.steps-section__list--item i {
+  color: hsl(0deg, 0%, 25%);
+  margin-right: 1.1111111111em;
+  opacity: 0.75;
+  width: 1.1111111111em;
 }
 
 .restaurant-section {
@@ -148,6 +190,7 @@ header {
   box-shadow: 0.1111111111em 0.2222222222em 0.5555555556em rgba(0, 0, 0, 0.1);
   overflow: hidden;
   margin-top: 1.3888888889em;
+  position: relative;
 }
 .restaurant-card a {
   text-decoration: none;
@@ -176,6 +219,9 @@ header {
 }
 .restaurant-card__infos--fav .full {
   display: none;
+  background-image: linear-gradient(-10deg, #9356DC 0%, #FF79DA 100%);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
 }
 .restaurant-card__infos--fav .empty {
   display: block;
@@ -185,6 +231,23 @@ header {
 }
 .restaurant-card__infos--fav:hover .empty {
   display: none;
+}
+.restaurant-card__infos--fav:active {
+  transform: scale(0.9);
+  transition: all 0.2s ease;
+}
+
+.restaurant-card.new::after {
+  content: "Nouveau";
+  position: absolute;
+  padding: 0.2777777778em 0.5555555556em;
+  top: 1.1111111111em;
+  right: 1.1111111111em;
+  font-size: 0.9em;
+  font-weight: bold;
+  border-radius: 0.1388888889em;
+  color: #008766;
+  background-color: #99e2d0;
 }
 
 footer {
