--- a/styles/main.css
+++ b/styles/main.css
@@ -36,12 +36,41 @@ body {
 }
 .primary-btn {
   border: none;
+  display: block;
+  margin: 0 auto;
+  min-width: 11.1111111111em;
   font-size: 0.85em;
   font-weight: bold;
   padding: 1.1111111111em 1.3888888889em;
   border-radius: 5.5555555556em;
   color: #ffffff;
   background-image: linear-gradient(-10deg, #9356DC 0%, #FF79DA 100%);
+}
+
+.add-to-fav {
+  font-size: 1.4em;
+  color: inherit;
+  position: relative;
+  z-index: 5;
+}
+.add-to-fav .full {
+  display: none;
+  background-image: linear-gradient(-10deg, #9356DC 0%, #FF79DA 100%);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+}
+.add-to-fav .empty {
+  display: block;
+}
+.add-to-fav:hover .full {
+  display: block;
+}
+.add-to-fav:hover .empty {
+  display: none;
+}
+.add-to-fav:active {
+  transform: scale(0.9);
+  transition: all 0.2s ease;
 }
 
 .classic-title {
@@ -76,6 +105,71 @@ header {
      object-fit: contain;
 }
 
+.header__back {
+  text-decoration: none;
+  color: inherit;
+  font-size: 1.1em;
+  position: absolute;
+  top: 50%;
+  transform: translateY(-50%);
+  left: 1.1111111111em;
+}
+
+footer {
+  padding-left: 1.1111111111em;
+  padding-right: 1.1111111111em;
+  background-color: hsl(0deg, 0%, 25%);
+  color: #ffffff;
+  padding-top: 1.6666666667em;
+  padding-bottom: 2.2222222222em;
+}
+
+footer h2 {
+  font-family: "Shrikhand", "Cambria", serif;
+  font-weight: normal;
+  font-size: 1.2em;
+  margin-bottom: 1.1111111111em;
+}
+
+.footer-list {
+  list-style: none;
+  text-decoration: none;
+  font-size: 0.9em;
+}
+.footer-list__item a {
+  text-decoration: inherit;
+  color: inherit;
+}
+.footer-list__item i {
+  margin-right: 0.8333333333em;
+  width: 1em;
+}
+.footer-list__item:not(:last-child) {
+  margin-bottom: 0.5em;
+}
+
+.hero-section {
+  padding-left: 1.1111111111em;
+  padding-right: 1.1111111111em;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  text-align: center;
+  padding-top: 2.7777777778em;
+  padding-bottom: 2.7777777778em;
+  background-color: #F6F6F6;
+}
+
+.hero-section--title {
+  margin-bottom: 0.5555555556em;
+  line-height: 1.1em;
+}
+
+.hero-section--slogan {
+  margin-bottom: 1.1111111111em;
+}
+
 .searchform {
   padding-left: 1.1111111111em;
   padding-right: 1.1111111111em;
@@ -107,28 +201,6 @@ header {
   color: inherit;
 }
 
-.hero-section {
-  padding-left: 1.1111111111em;
-  padding-right: 1.1111111111em;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  flex-direction: column;
-  text-align: center;
-  padding-top: 2.7777777778em;
-  padding-bottom: 2.7777777778em;
-  background-color: #F6F6F6;
-}
-
-.hero-section--title {
-  margin-bottom: 0.5555555556em;
-  line-height: 1.1em;
-}
-
-.hero-section--slogan {
-  margin-bottom: 1.1111111111em;
-}
-
 .steps-section {
   padding-left: 1.1111111111em;
   padding-right: 1.1111111111em;
@@ -142,7 +214,7 @@ header {
 
 .steps-section__list--item {
   list-style: none;
-  box-shadow: 0.1111111111em 0.2222222222em 0.5555555556em rgba(0, 0, 0, 0.1);
+  box-shadow: 0.1111111111em 0.2222222222em 0.5555555556em rgba(0, 0, 0, 0.15);
   border-radius: 0.8333333333em;
   background-color: #F6F6F6;
   padding: 1.6666666667em;
@@ -187,7 +259,7 @@ header {
 .restaurant-card {
   background-color: #ffffff;
   border-radius: 0.8333333333em;
-  box-shadow: 0.1111111111em 0.2222222222em 0.5555555556em rgba(0, 0, 0, 0.1);
+  box-shadow: 0.1111111111em 0.2222222222em 0.5555555556em rgba(0, 0, 0, 0.15);
   overflow: hidden;
   margin-top: 1.3888888889em;
   position: relative;
@@ -198,6 +270,12 @@ header {
 .restaurant-card__thumbnail {
   background-color: hsl(0deg, 0%, 25%);
   height: 9.7222222222em;
+}
+.restaurant-card__thumbnail img {
+  width: 100%;
+  height: 100%;
+  -o-object-fit: cover;
+     object-fit: cover;
 }
 
 .restaurant-card__infos {
@@ -250,35 +328,134 @@ header {
   background-color: #99e2d0;
 }
 
-footer {
+.singular-thumbnail {
+  height: 13.8888888889em;
+}
+.singular-thumbnail--img {
+  height: 100%;
+  width: 100%;
+  -o-object-fit: cover;
+     object-fit: cover;
+}
+
+.singular-main-section {
+  border-radius: 2.2222222222em 2.2222222222em 0px 0px;
+  background-color: #ffffff;
+  transform: translateY(-2.2222222222em);
+  display: flex;
+  flex-direction: column;
+  justify-content: stretch;
+}
+.singular-main-section .primary-btn {
+  margin-top: 2.7777777778em;
+}
+
+.singular-title-section {
   padding-left: 1.1111111111em;
   padding-right: 1.1111111111em;
-  background-color: hsl(0deg, 0%, 25%);
-  color: #ffffff;
-  padding-top: 1.6666666667em;
-  padding-bottom: 2.2222222222em;
+  padding-top: 2.2222222222em;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
 }
-
-footer h2 {
+.singular-title-section--h1 {
   font-family: "Shrikhand", "Cambria", serif;
   font-weight: normal;
-  font-size: 1.2em;
-  margin-bottom: 1.1111111111em;
 }
 
-.footer-list {
-  list-style: none;
-  text-decoration: none;
-  font-size: 0.9em;
+.singular-element {
+  padding-left: 1.1111111111em;
+  padding-right: 1.1111111111em;
+  margin-top: 1.9444444444em;
 }
-.footer-list__item a {
-  text-decoration: inherit;
-  color: inherit;
+.singular-element--title {
+  text-transform: uppercase;
+  font-weight: lighter;
+  font-size: 1em;
+  padding-bottom: 0.5em;
+  position: relative;
 }
-.footer-list__item i {
-  margin-right: 0.8333333333em;
-  width: 1em;
+.singular-element--title::after {
+  content: "";
+  position: absolute;
+  bottom: 0px;
+  left: 0px;
+  width: 2.7777777778em;
+  height: 0.2222222222em;
+  background-color: #99E2D0;
 }
-.footer-list__item:not(:last-child) {
-  margin-bottom: 0.5em;
+
+.singular-element__item {
+  background-color: #ffffff;
+  margin-top: 1.1111111111em;
+  display: flex;
+  border-radius: 0.8333333333em;
+  box-shadow: 0.1111111111em 0.2222222222em 0.5555555556em rgba(0, 0, 0, 0.15);
+  overflow: hidden;
+  position: relative;
+}
+
+.singular-element__item-text {
+  width: 80%;
+  white-space: nowrap;
+  overflow: hidden;
+  margin-top: 0.8333333333em;
+  margin-bottom: 0.8333333333em;
+  margin-left: 0.8333333333em;
+  transition: all 0.2s ease;
+}
+.singular-element__item-text--title {
+  font-weight: bold;
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
+.singular-element__item-text--details {
+  font-size: 0.95em;
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
+
+.singular-element__item--price {
+  display: flex;
+  white-space: nowrap;
+  justify-content: flex-end;
+  align-items: flex-end;
+  font-weight: bold;
+  padding-left: 0.8333333333em;
+  padding-right: 0.8333333333em;
+  padding-bottom: 0.8333333333em;
+  width: 20%;
+}
+
+.singular-element__item__add-btn {
+  min-width: 20%;
+  height: 100%;
+  background-color: #99E2D0;
+  font-size: 1.4em;
+  color: #ffffff;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: absolute;
+  top: 0px;
+  right: 0px;
+  transform: translate(100%);
+  transition: all 0.3s ease-out;
+}
+.singular-element__item__add-btn i {
+  transform: rotate(-360deg);
+  transition: all 0.3s ease-out;
+}
+
+.singular-element__item:hover .singular-element__item__add-btn {
+  transform: translate(0%);
+  transition: all 0.3s ease-out;
+}
+.singular-element__item:hover .singular-element__item-text {
+  width: 55%;
+  transition: all 0.3s ease-out;
+}
+.singular-element__item:hover .singular-element__item__add-btn i {
+  transform: rotate(0deg);
+  transition: all 0.3s ease-out;
 }/*# sourceMappingURL=main.css.map */
