--- a/styles/main.css
+++ b/styles/main.css
@@ -43,8 +43,36 @@ body {
   font-weight: bold;
   padding: 1.1111111111em 1.3888888889em;
   border-radius: 5.5555555556em;
+  box-shadow: 0em 0.2777777778em 0.5555555556em rgba(0, 0, 0, 0.2);
+  position: relative;
+  overflow: hidden;
+  transition: all 0.25s ease;
+  cursor: pointer;
   color: #ffffff;
   background-image: linear-gradient(-10deg, #9356DC 0%, #FF79DA 100%);
+}
+.primary-btn a {
+  color: inherit;
+  text-decoration: inherit;
+}
+.primary-btn::after {
+  content: "";
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  background-color: #ffffff;
+  opacity: 0;
+  top: 0px;
+  left: 0px;
+  transition: all 0.25s ease;
+}
+.primary-btn:hover {
+  box-shadow: 0em 0.2777777778em 0.5555555556em rgba(0, 0, 0, 0.3);
+  transition: all 0.25s ease;
+}
+.primary-btn:hover::after {
+  opacity: 0.1;
+  transition: all 0.25s ease;
 }
 
 .add-to-fav {
@@ -76,6 +104,12 @@ body {
 .classic-title {
   font-size: 1.5em;
   font-weight: bold;
+  display: flex;
+}
+@media screen and (min-width: 1100px) {
+  .classic-title {
+    justify-content: center;
+  }
 }
 
 header {
@@ -85,7 +119,6 @@ header {
   align-items: center;
   justify-content: center;
   height: 3.6111111111em;
-  width: 100vw;
   padding-top: 0.5555555556em;
   padding-bottom: 0.5555555556em;
   box-shadow: 0em 0.1111111111em 0.2777777778em rgba(0, 0, 0, 0.15);
@@ -122,6 +155,8 @@ footer {
   color: #ffffff;
   padding-top: 1.6666666667em;
   padding-bottom: 2.2222222222em;
+  display: flex;
+  flex-direction: column;
 }
 
 footer h2 {
@@ -135,6 +170,8 @@ footer h2 {
   list-style: none;
   text-decoration: none;
   font-size: 0.9em;
+  display: flex;
+  flex-direction: column;
 }
 .footer-list__item a {
   text-decoration: inherit;
@@ -148,6 +185,71 @@ footer h2 {
   margin-bottom: 0.5em;
 }
 
+.loader {
+  width: 100vw;
+  height: 100vh;
+  position: fixed;
+  top: 0px;
+  left: 0px;
+  z-index: 1500;
+  background-color: #ffffff;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  -webkit-animation: Loaded 0.8s ease 7.4s both;
+          animation: Loaded 0.8s ease 7.4s both;
+  box-shadow: 0.1111111111em 0.2222222222em 0.5555555556em rgba(0, 0, 0, 0.15);
+}
+.loader::before {
+  content: "";
+  position: absolute;
+  height: 100%;
+  width: 100%;
+  top: 100%;
+  background-color: #9356DC;
+  transform-origin: 50% 0%;
+  -webkit-animation: Reduce 1.2s ease-out 7.1s both;
+          animation: Reduce 1.2s ease-out 7.1s both;
+}
+
+.loader--animation {
+  width: 90vw;
+  max-width: 16.6666666667em;
+}
+
+@-webkit-keyframes Loaded {
+  from {
+    transform: translateY(0px);
+  }
+  to {
+    transform: translateY(-150%);
+  }
+}
+
+@keyframes Loaded {
+  from {
+    transform: translateY(0px);
+  }
+  to {
+    transform: translateY(-150%);
+  }
+}
+@-webkit-keyframes Reduce {
+  from {
+    transform: scaleY(100%);
+  }
+  to {
+    transform: scaleY(0%);
+  }
+}
+@keyframes Reduce {
+  from {
+    transform: scaleY(100%);
+  }
+  to {
+    transform: scaleY(0%);
+  }
+}
 .hero-section {
   padding-left: 1.1111111111em;
   padding-right: 1.1111111111em;
@@ -205,15 +307,22 @@ footer h2 {
   padding-left: 1.1111111111em;
   padding-right: 1.1111111111em;
   padding-top: 2.7777777778em;
-  padding-bottom: 2.7777777778em;
+  padding-bottom: 1.1111111111em;
 }
 
 .steps-section__list {
   margin-top: 1.3888888889em;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  -moz-column-gap: 2.2222222222em;
+       column-gap: 2.2222222222em;
 }
 
 .steps-section__list--item {
   list-style: none;
+  width: 100vw;
+  max-width: none;
   box-shadow: 0.1111111111em 0.2222222222em 0.5555555556em rgba(0, 0, 0, 0.15);
   border-radius: 0.8333333333em;
   background-color: #F6F6F6;
@@ -221,9 +330,13 @@ footer h2 {
   font-weight: bold;
   margin-left: 0.8333333333em;
   position: relative;
-}
-.steps-section__list--item:not(:last-child) {
+  transition: all 0.3s ease-out;
   margin-bottom: 1.6666666667em;
+}
+@media screen and (min-width: 1100px) {
+  .steps-section__list--item {
+    max-width: 25em;
+  }
 }
 .steps-section__list--item::after {
   content: attr(data-count);
@@ -246,6 +359,15 @@ footer h2 {
   margin-right: 1.1111111111em;
   opacity: 0.75;
   width: 1.1111111111em;
+  transition: all 0.3s ease-out;
+}
+.steps-section__list--item:hover {
+  background-color: #F5EDFF;
+  transition: all 0.3s ease-out;
+}
+.steps-section__list--item:hover i {
+  color: #9356DC;
+  transition: all 0.3s ease-out;
 }
 
 .restaurant-section {
@@ -256,13 +378,24 @@ footer h2 {
   background-color: #F6F6F6;
 }
 
+.restaurant-cards {
+  margin-top: 1.3888888889em;
+  display: flex;
+  flex-wrap: wrap;
+  row-gap: 1.3888888889em;
+  -moz-column-gap: 2.2222222222em;
+       column-gap: 2.2222222222em;
+  justify-content: center;
+}
+
 .restaurant-card {
   background-color: #ffffff;
   border-radius: 0.8333333333em;
   box-shadow: 0.1111111111em 0.2222222222em 0.5555555556em rgba(0, 0, 0, 0.15);
   overflow: hidden;
-  margin-top: 1.3888888889em;
   position: relative;
+  width: 100%;
+  max-width: 22.2222222222em;
 }
 .restaurant-card a {
   text-decoration: none;
@@ -298,6 +431,7 @@ footer h2 {
 .restaurant-card__infos--fav .full {
   display: none;
   background-image: linear-gradient(-10deg, #9356DC 0%, #FF79DA 100%);
+  background-clip: text;
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
 }
@@ -328,6 +462,27 @@ footer h2 {
   background-color: #99e2d0;
 }
 
+@-webkit-keyframes fadeIn {
+  from {
+    transform: translateY(-30%);
+    opacity: 0;
+  }
+  to {
+    transform: translateY(0px);
+    opacity: 1;
+  }
+}
+
+@keyframes fadeIn {
+  from {
+    transform: translateY(-30%);
+    opacity: 0;
+  }
+  to {
+    transform: translateY(0px);
+    opacity: 1;
+  }
+}
 .singular-thumbnail {
   height: 13.8888888889em;
 }
@@ -393,6 +548,28 @@ footer h2 {
   box-shadow: 0.1111111111em 0.2222222222em 0.5555555556em rgba(0, 0, 0, 0.15);
   overflow: hidden;
   position: relative;
+  -webkit-animation: fadeIn 0.9s ease both;
+          animation: fadeIn 0.9s ease both;
+}
+.singular-element__item:nth-of-type(1) {
+  -webkit-animation-delay: 0.25s;
+          animation-delay: 0.25s;
+}
+.singular-element__item:nth-of-type(2) {
+  -webkit-animation-delay: 0.5s;
+          animation-delay: 0.5s;
+}
+.singular-element__item:nth-of-type(3) {
+  -webkit-animation-delay: 0.75s;
+          animation-delay: 0.75s;
+}
+.singular-element__item:nth-of-type(4) {
+  -webkit-animation-delay: 1s;
+          animation-delay: 1s;
+}
+.singular-element__item:nth-of-type(5) {
+  -webkit-animation-delay: 1.25s;
+          animation-delay: 1.25s;
 }
 
 .singular-element__item-text {
@@ -402,7 +579,7 @@ footer h2 {
   margin-top: 0.8333333333em;
   margin-bottom: 0.8333333333em;
   margin-left: 0.8333333333em;
-  transition: all 0.2s ease;
+  transition: all 0.3s ease-out;
 }
 .singular-element__item-text--title {
   font-weight: bold;
