--- a/styles/scss/components/_titles.scss
+++ b/styles/scss/components/_titles.scss
@@ -1,4 +1,9 @@
 .classic-title {
     font-size: 1.5em;
     font-weight: bold;
+    display: flex;
+
+    @include tablet-and-more {
+        justify-content: center;
+    }
 }
