--- a/styles/scss/base/_base.scss
+++ b/styles/scss/base/_base.scss
@@ -1,3 +1,16 @@
+/*
+
+// Feuille de style SCSS du site de OhMyFood
+
+    ====
+    Base
+    ====
+
+    - CSS Reset et style de base de l'ensemble du site
+
+*/
+
+
 *{
     margin:0;
     padding:0;
