--- a/styles/scss/base/_typography.scss
+++ b/styles/scss/base/_typography.scss
@@ -1,4 +1,14 @@
-// Import des polices d'écriture
+/*
+
+// Feuille de style SCSS du site de OhMyFood
+
+    ==========
+    Typography
+    ==========
+
+    - Import des polices d'écriture du site
+
+*/
 
 // Shrikhand
 
