--- a/styles/scss/components/_add-to-fav.scss
+++ b/styles/scss/components/_add-to-fav.scss
@@ -1,3 +1,15 @@
+/*
+
+// Feuille de style SCSS du site de OhMyFood
+
+    ==========================
+    Bouton d'ajour aux favoris
+    ==========================
+
+    - Style du composant "Bouton d'ajout aux favoris en forme de coeur"
+
+*/
+
 .add-to-fav {
     font-size: 1.4em;
     color: inherit;
