--- a/styles/scss/components/_buttons.scss
+++ b/styles/scss/components/_buttons.scss
@@ -1,3 +1,15 @@
+/*
+
+// Feuille de style SCSS du site de OhMyFood
+
+    ================
+    Boutons généraux
+    ================
+
+    - Style des boutons du site
+
+*/
+
 .primary-btn {
     border: none;
     display: block;
