--- a/styles/scss/layouts/_header.scss
+++ b/styles/scss/layouts/_header.scss
@@ -1,3 +1,16 @@
+/*
+
+// Feuille de style SCSS du site de OhMyFood
+
+    =====================
+    Entête / Header
+    =====================
+
+    - Style de l'entête du site
+
+*/
+
+
 header {
     @include x-container;
     
