--- a/styles/scss/utils/_functions.scss
+++ b/styles/scss/utils/_functions.scss
@@ -1,3 +1,15 @@
+/*
+
+// Feuille de style SCSS du site de OhMyFood
+
+    ==============
+    Fonctions SCSS
+    ==============
+
+    - Fonctions SCSS principales du site
+
+*/
+
 // Calcul de la valeur en EM / REM
 
 @use "variables" as var; //Précisez var.$variable pour faire référence à une variable SCSS du fichier variables.scss
