--- a/styles/scss/utils/_mixins.scss
+++ b/styles/scss/utils/_mixins.scss
@@ -1,3 +1,15 @@
+/*
+
+// Feuille de style SCSS du site de OhMyFood
+
+    ============
+    Mixines SCSS
+    ============
+
+    - Mixines SCSS principales du site
+
+*/
+
 // Container général
 
 @mixin x-container {
