--- a/styles/scss/layouts/_loader.scss
+++ b/styles/scss/layouts/_loader.scss
@@ -1,3 +1,15 @@
+/*
+
+// Feuille de style SCSS du site de OhMyFood
+
+    ============================
+    Écran de chargement / Loader
+    ============================
+
+    - Style de l'écran de chargement du site
+
+*/
+
 .loader {
     width: 100vw;
     height: 100vh;
@@ -7,7 +19,7 @@
     z-index: 1500;
     background-color: $white;
 
-    display: flex;
+    display: none;
     
     justify-content: center;
     align-items: center;
