--- a/styles/scss/utils/_variables.scss
+++ b/styles/scss/utils/_variables.scss
@@ -1,3 +1,15 @@
+/*
+
+// Feuille de style SCSS du site de OhMyFood
+
+    ==============
+    Variables SCSS
+    ==============
+
+    - Variables SCSS principales du site
+
+*/
+
 // Variables de couleurs
 
 $primary--color : #9356DC;
