--- a/styles/scss/layouts/_loader.scss
+++ b/styles/scss/layouts/_loader.scss
@@ -19,7 +19,7 @@
     z-index: 1500;
     background-color: $white;
 
-    display: none;
+    display: flex;
     
     justify-content: center;
     align-items: center;
